# stm32f3blinky

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
