[package]
name = "stm32f3"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", path = "../embassy/embassy-executor", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [
    "defmt",
    "stm32f303vc",
    "time",
    "time-driver-any",
    "exti",
    "memory-x",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync" }
embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = "full"
